# wzsh

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: filenamegen.yml  filenamgen.yml  linux.yml  macos.yml  windows.yml
altlex/: Cargo.toml
altlex/src/: errors.rs  lexer.rs  lib.rs  reader.rs
filedescriptor/src/: unix.rs
filenamegen/: Cargo.toml  README.md
filenamegen/src/: lib.rs  node.rs  nodewalker.rs  parser.rs  recursivewalker.rs  token.rs
pathsearch/: Cargo.toml  README.md
pathsearch/src/: lib.rs  unix.rs  windows.rs
shell_compiler/: Cargo.toml
shell_compiler/src/: lib.rs  registeralloc.rs
shell_lexer/: Cargo.toml
shell_lexer/src/: errors.rs  lexer.rs  lib.rs  position.rs  reader.rs  tokenenum.rs
shell_parser/: Cargo.toml
shell_parser/src/: lib.rs  parser.rs  test.rs  types.rs
shell_vm/: Cargo.toml
shell_vm/src/: environment.rs  host.rs  ioenv.rs  lib.rs  op.rs
shlex/: Cargo.toml
shlex/src/: alias.rs  environment.rs  error.rs  expander.rs  lib.rs  paramexp.rs  string.rs
src/: errorprint.rs  execenv.rs  exitstatus.rs  expander.rs  filedescriptor.rs  job.rs  main.rs  parse.rs  pathsearch.rs  repl.rs  script.rs  shellhost.rs
src/builtins/: builtins.rs  colon.rs  echo.rs  env.rs  history.rs  jobcontrol.rs  ls.rs  mod.rs  truefalse.rs  which.rs  workingdir.rs
src/parse/: mod.rs  test.rs  types.rs
src/vm/: codegen.rs  mod.rs  registeralloc.rs
