[package]
name = "wzsh"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2018"

[dependencies]
failure = "0.1"
filedescriptor = { path = "filedescriptor" }
lazy_static = "1.3"
libc = "0.2"
rustyline = "4.0"
shell_compiler = { path = "shell_compiler" }
shell_lexer = { path = "shell_lexer" }
shell_parser = { path = "shell_parser" }
shell_vm = { path = "shell_vm" }
structopt = "0.2"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "handleapi",
    "synchapi",
    "fileapi",
    "processthreadsapi",
]}

[dev-dependencies]
pretty_assertions = "0.6"

[workspace]
