[package]
name = "wzsh"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2018"

[build-dependencies]
vergen = "3"

[dependencies]
atty = "0.2"
cancel = "0.1"
dirs = "2.0"
anyhow = "1.0"
filedescriptor = "0.7"
lazy_static = "1.3"
libc = "0.2"
termwiz = "0.7"
filenamegen = { path = "filenamegen" }
shell_compiler = { path = "shell_compiler" }
shell_lexer = { path = "shell_lexer" }
shell_parser = { path = "shell_parser" }
shell_vm = { path = "shell_vm" }
structopt = "0.2"
pathsearch = { path = "pathsearch" }

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "handleapi",
    "synchapi",
    "fileapi",
    "processthreadsapi",
]}

[dev-dependencies]
pretty_assertions = "0.6"

[workspace]
