[package]
name = "wzsh"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2018"
default-run = "wzsh"

[build-dependencies]
vergen = "9"

[dependencies]
atty = "0.2"
cancel = "0.1"
dirs-next = "2.0"
anyhow = "1.0"
filedescriptor = "0.8"
lazy_static = "1.3"
libc = "0.2"
filenamegen = { path = "filenamegen" }
shell_compiler = { path = "shell_compiler" }
shell_lexer = { path = "shell_lexer" }
shell_parser = { path = "shell_parser" }
shell_vm = { path = "shell_vm" }
structopt = "0.3"
pathsearch = { path = "pathsearch" }
chrono = "0.4"
sqlite = "0.36"

[dependencies.tabout]
version="0.3"
#path = "../wezterm/tabout"
#git = "https://github.com/wez/wezterm.git"

[dependencies.termwiz]
version="0.22"
#path = "../wezterm/termwiz"
#git = "https://github.com/wez/wezterm.git"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = [
    "aclapi",
    "winuser",
    "handleapi",
    "synchapi",
    "fileapi",
    "processthreadsapi",
]}

[dev-dependencies]
pretty_assertions = "0.6"

[workspace]
