[package]
name = "filenamegen"
version = "0.2.4"
authors = ["Wez Furlong"]
edition = "2018"
description = "Shell-style filename generation aka globbing"
license = "MIT"
documentation = "https://docs.rs/filenamegen"
repository = "https://github.com/wez/wzsh"
keywords = ["glob", "wildmatch", "filenamegen", "fnmatch"]
readme = "README.md"

[dependencies]
bstr = "0.1"
anyhow = "1.0"
regex = "1.1"
walkdir = "2.3"

[dev-dependencies]
pretty_assertions = "0.6"
tempdir = "0.3"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.17"
