[package]
name = "filenamegen"
version = "0.2.6"
authors = ["Wez Furlong"]
edition = "2021"
description = "Shell-style filename generation aka globbing"
license = "MIT"
documentation = "https://docs.rs/filenamegen"
repository = "https://github.com/wez/wzsh"
keywords = ["glob", "wildmatch", "filenamegen", "fnmatch"]
readme = "README.md"

[dependencies]
bstr = "1.0"
anyhow = "1.0"
regex = "1.10"
walkdir = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"

[target.'cfg(unix)'.dev-dependencies]
nix = {version="0.28", features=["feature"]}
