[package]
name = "shell_compiler"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
filedescriptor = { path = "../filedescriptor" }
lazy_static = "1.3"
shell_lexer = { path = "../shell_lexer" }
shell_parser = { path = "../shell_parser" }
shell_vm = { path = "../shell_vm" }

[dev-dependencies]
pretty_assertions = "0.6"
