[package]
name = "shell_vm"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2018"

[dependencies]
bstr = "0.1"
failure = "0.1"
failure_derive = "0.1"
filedescriptor = { path = "../filedescriptor" }
filenamegen = { path = "../filenamegen" }
lazy_static = "1.3"

[dev-dependencies]
pretty_assertions = "0.6"
